--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,30 +1,39 @@
 /* Extra small devices (phones, 600px and down) */
+
 @media only screen and (max-width: 688px) {
   .players-banner {
     width: 100%;
     align-items: center;
   }
   .banner {
+    margin-top: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  .players-wrapper {
-  
-    display: flex;
-    align-items: stretch;
+  .blogs {
+    width: 90%;
+  }
+  .thumbnail {
+    width: 90%;
+    margin-top: 50px;
+  }
+  .players {
+    width: 100%;
+    display: grid;
     grid-template-columns: repeat(1, 1fr);
-    flex-direction: column;
-   
+    grid-gap: 30px;
+    margin: 27px 0;
   }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width:688px) and (max-width:992px) {
+  .players {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    margin: 27px 0;
+  }
 }
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
